---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: concatenate.md - `typing.Concatenate` - Invalid uses of `Concatenate` - Standalone annotation (not inside `Callable`)
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/concatenate.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Callable, Concatenate, ParamSpec
 2 | 
 3 | class Foo[T]: ...
 4 | 
 5 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a parameter annotation"
 6 | def invalid0(x: Concatenate): ...
 7 | 
 8 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a parameter annotation"
 9 | def invalid1(x: Concatenate[int]): ...
10 | 
11 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a parameter annotation"
12 | def invalid2(x: Concatenate[int, ...]) -> None: ...
13 | 
14 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a return type annotation"
15 | def invalid3() -> Concatenate[int, ...]: ...
16 | 
17 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a return type annotation"
18 | def invalid4() -> Concatenate[()]: ...
19 | 
20 | # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
21 | a: Concatenate
22 | 
23 | class Foo[**P]:
24 |     # error: [invalid-type-form] "`typing.Concatenate` is not allowed in this context in a type expression"
25 |     b: Concatenate[int, P]
26 | 
27 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
28 | def invalid5[**P](x: Foo[Concatenate[P, ...]]) -> None: ...
```

# Diagnostics

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:6:17
  |
6 | def invalid0(x: Concatenate): ...
  |                 ^^^^^^^^^^^
  |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:9:17
  |
9 | def invalid1(x: Concatenate[int]): ...
  |                 ^^^^^^^^^^^^^^^^
  |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a parameter annotation
  --> src/mdtest_snippet.py:12:17
   |
12 | def invalid2(x: Concatenate[int, ...]) -> None: ...
   |                 ^^^^^^^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a return type annotation
  --> src/mdtest_snippet.py:15:19
   |
15 | def invalid3() -> Concatenate[int, ...]: ...
   |                   ^^^^^^^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a return type annotation
  --> src/mdtest_snippet.py:18:19
   |
18 | def invalid4() -> Concatenate[()]: ...
   |                   ^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:21:4
   |
21 | a: Concatenate
   |    ^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: `typing.Concatenate` is not allowed in this context in a type expression
  --> src/mdtest_snippet.py:25:8
   |
25 |     b: Concatenate[int, P]
   |        ^^^^^^^^^^^^^^^^^^^
   |
info: `typing.Concatenate` is only valid:
info:  - as the first argument to `Callable`
info:  - as a type argument for a `ParamSpec` parameter

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context in a parameter annotation
  --> src/mdtest_snippet.py:28:38
   |
28 | def invalid5[**P](x: Foo[Concatenate[P, ...]]) -> None: ...
   |                                      ^
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as the default type for another ParamSpec
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class

```
